@@ -1,3 +1,7 @@
+2010-10-26  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/commands/jump-or-exec.jl: added toggle-or-exec wrapper
+	                                            updated introduction part
+
 2010-10-25  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl: add iconify-on-leave window-matcher
 
